apps/ids-dev/clusters/prd/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ids-dev
  namespace: ids-system-dev
  labels:
    app: ids-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ids-dev
  template:
    metadata:
      labels:
        app: ids-dev
    spec:
      containers:
        - name: ids
          image: nic5694/ids:0.14
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
