apps/ids-dev/clusters/prd/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ids
  namespace: ids-system-dev
spec:
  type: ClusterIP
  selector:
    app: ids
  ports:
    - name: http
      port: 3000
      targetPort: 3000
