apps/ids-dev/clusters/prd/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ids
spec:
  ingressClassName: ingress-nginx
  rules:
  - host: ids.homelab
    http:
      paths:
      - backend:
          service:
            name: ids
            port:
              number: 3000
        path: /
        pathType: Exact
